# sentiric-llm-llama-service

./: .context.md  .dockerignore  .env  .env.cpu  .env.example  .env.gpu  .gitignore  ARCHITECTURE.md  CMakeLists.txt  DEPLOYMENT.md  DEVELOPMENT.md  Dockerfile  Dockerfile.gpu  LOGIC.md  Makefile  README.md  TROUBLESHOOTING.md  benchmark_comparison.sh  docker-compose.cpu.yml  docker-compose.gpu.override.yml  docker-compose.gpu.yml  docker-compose.open-webui.yml  docker-compose.override.yml  docker-compose.run.gpu.yml  docker-compose.yml  e2e-test.sh  grpc_test_client.py  long-dialogue-test.sh  matrix-test.sh  parallel_verify.sh  real-world-phone-test.sh  run_request.sh  stress-test.sh  test.md  test_build.sh  vcpkg.json
.github/workflows/: build-and-push.yml
docs/: 00_PROJECT_PHILOSOPHY.md  API_SPECIFICATION.md  TASKS.md
docs/KB/: 01_CRITICAL_APIS.md  02_PROJECT_PATTERNS.md  03_SOLVED_ISSUES.md  04_LLAMA_CPP_API_BINDING.md  05_LLAMA_API_REFERENCE.md
docs/architecture/: PERFORMANCE_AND_MEMORY.md  SYSTEM_ARCHITECTURE.md
docs/design/: 01_LLM_DRIVEN_UI_RFC.md
docs/guides/: 01_DEVELOPMENT.md  02_DEPLOYMENT.md  03_CONFIGURATION.md  04_COMPOSE_USAGE_GUIDE.md  UI_TEST_GUIDE.md
examples/: README.md  ecommerce_service_context.txt  ecommerce_service_context_standardized.txt  finance_service_context.txt  health_service_context.txt  hospitality_service_context.txt  hospitality_service_context_standardized.txt  insurance_service_context.txt  legal_service_context.txt  legal_service_context_standardized.txt  public_service_context.txt
models/: profiles.json
proto/: local.proto
src/: config.h  grpc_server.cpp  grpc_server.h  grpc_test_client.cpp  http_server.cpp  http_server.h  llm_engine.cpp  llm_engine.h  main.cpp  model_handler.cpp  model_handler.h  model_manager.cpp  model_manager.h  prompt_formatter.cpp  prompt_formatter.h  suts_logger.h
src/cli/: benchmark.cpp  benchmark.h  cli_client.cpp  cli_client.h  grpc_client.cpp  grpc_client.h  health_check.cpp  health_check.h  http_client.cpp  http_client.h  main.cpp
src/controllers/: chat_controller.cpp  chat_controller.h  model_controller.cpp  model_controller.h  system_controller.cpp  system_controller.h
src/core/: context_pool.cpp  context_pool.h  dynamic_batcher.h  grammar_parser.h  model_warmup.h  prompt_formatter.cpp  prompt_formatter.h
studio/: app.js  index.html  style.css
studio-v2/: animations.css  api.js  app.js  components.css  index.html  main.css  main.js  state.js  style.css  ui.js
tests/: matrix_runner.sh
tests/lib/: common.sh
tests/suites/: 01_phone_simulation.sh  02_technical_checks.sh  03_stress_mini.sh  04_long_context.sh  05_advanced_capabilities.sh  06_complex_flow.sh  07_health_flow.sh  08_finance_flow.sh  09_hospitality_flow.sh  10_insurance_flow.sh  11_legal_flow.sh  12_public_flow.sh  13_personal_flow.sh  14_voice_gateway_simulation.sh  15_ultimate_dialogue_sim.sh  16_adversarial_dialogue_sim.sh
web/: app.js  index.html  style.css
